karnc/tests/fixtures/positive/218_numeric_tostring/src/demo.karn
commons demo

fn fromInt(n: Int) -> String {
  n.toString()
}

fn fromFloat(f: Float) -> String {
  f.toString()
}
