karnc/tests/fixtures/negative/172_refined_float_literal_violates/input.karn
commons bad {
  type Ratio = Float where InRange(0.0, 1.0)

  fn f() -> Ratio {
    1.5
  }
}
